# EasyPR-Chinese-license-plate-recognition-system

./: ARM Linux下EasyPR中文车牌识别系统开发.doc  README.md
EasyPR-master-pc/test/: chars - 副本.hpp  chars.hpp  plate - 副本.hpp  plate.hpp
easypr1/EasyPR-master-arm/: CMakeCache.txt  CMakeLists.txt  Makefile  access_log  arm_test  arm_test.c  arm_test.cpp  cmake_install.cmake  demo_arm - 加时间  example.txt  test1.c  testEasyPR (2).c  testEasyPR.cpp  test_1  zxdemo_test  原CMakeLists.txt  原demo_arm  无数据demo_arm
easypr1/EasyPR-master-arm/include/easypr/: config.h
easypr1/EasyPR-master-arm/include/easypr/core/: plate_locate.h
easypr1/EasyPR-master-arm/model/: 1svm_hist.xml  727ann.xml  81svm_hist.xml  ann.xml  pm727ann.xml  svm_hist.xml  原svm.xml  好721ann.xml  数据ann.xml  数据svm_hist.xml  训练svm_hist.xml
easypr1/EasyPR-master-arm/resources/result/: -lookcar.txt  -plate.txt  Result.xml  accuracy.txt  plateGroundTruth.txt
easypr1/EasyPR-master-arm/src/core/: chars_segment.cpp  core_func.cpp  feature.cpp  plate_detect.cpp  plate_locate.cpp
easypr1/EasyPR-master-arm/src/train/: ann_train.cpp  svm_train.cpp
easypr1/EasyPR-master-arm/test/: 1accuracy.hpp  accuracy.hpp  main.cpp  zxmain.cpp
easypr1/EasyPR-master-arm/新建文件夹/: Untitled Project.IAB  Untitled Project.IAD  Untitled Project.IMB  Untitled Project.IMD  Untitled Project.PFI  Untitled Project.PO  Untitled Project.PR  Untitled Project.PRI  Untitled Project.PS
